# argus

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: basic_trace.py  nested_trace.py
src/argus/: __init__.py
src/argus/core/: clock.py  events.py  tracer.py
src/argus/exporters/: chrome.py
src/argus/hooks/: kvcache.py  pytorch.py
tests/: conftest.py  test_integration.py
tests/test_core/: test_clock.py  test_events.py  test_tracer.py
tests/test_exporters/: test_chrome.py
tests/test_hooks/: test_kvcache.py  test_pytorch.py
tests/test_performance/: test_export.py  test_memory.py  test_overhead.py
